fix: fixed pagination alignment issues

--- a/src/components/FilterComponent/FilterComponent.module.css
+++ b/src/components/FilterComponent/FilterComponent.module.css
@@ -178,6 +178,7 @@
 }
 
 .pagination {
+  margin-right: 2vh;
   align-self: end;
   color: var(--secondary-color);
 }
