--- a/src/components/InnerContainer/InnerContainer.module.css
+++ b/src/components/InnerContainer/InnerContainer.module.css
@@ -51,7 +51,7 @@
     width: 8px;
     background-color: var(--primary-color);
     margin-right: 5px;
-    margin-left: 38px;
+    margin-left: 380px;
 
 }
 
